# dbt-city-access

./: .gitignore  README.md  example.env  pyproject.toml
data/: README.md  run_dbt.sh
data/analysis/: city_centers.json  city_centers_formatted.json  convert_json.py  poi-viz.ipynb
data/dbt_profiles/: profiles.yml
data/dbt_project/: dbt_project.yml
data/dbt_project/analyses/: generate_model_yaml.sql
data/dbt_project/macros/: test_has_primary_key.sql  test_is_qualified_geometry.sql  test_user_can_select.sql
data/dbt_project/models/: h3_r4.sql  h3_r4_access.sql  h3_r6_access.sql  h3_r7.sql  h3_r7_access.sql  h3_r8.sql  h3_r8_access.sql  h3_r8_clusters.sql  h3_r8_target.sql  local_pop.sql  pois.sql  pois_envelope.sql  pois_groups.sql  population_centers.sql  schema.yml
data/pois/: get_csv_uac_filters.py  get_pois.sh  groups.csv  uac_filter.txt
data/yogrt/: sources.yaml
design/: qgis.qgz
frontend/: .eslintrc.js  .firebaserc  .npmrc  .prettierrc  README.md  package-lock.json  package.json
frontend/.github/workflows/: test-npm-versions.yaml
frontend/public/: index.html
frontend/public/configurations/: layer-configurations.json  map-configuration.json
frontend/src/: config.js  main.js  map-configuration.js  messages.json  symbologiesHelper.js
frontend/src/components/: Dropdown.vue  Map.vue  Selector.vue  layerHelper.js
frontend/src/layer-configurations/: index.js
frontend/src/layer-symbologies/: index.js  random-points-desjardins.json
frontend/src/router/: index.js
frontend/src/views/: Home.vue  Login.vue
(+27 files in other folders)
