[tool.poetry]
name = "dbt-city-access"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dbt_city_access"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.5.0"
jupyter = "^1.0.0"
pandas = "^1.5.1"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
SQLAlchemy = "^1.4.43"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

